poc/test/e2e/testdata/aws/credentials_file.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: credentials-file
spec:
  logging:
    level:
      default: warn
  mergeGateways: true
  provider:
    kubernetes:
      envoyDeployment:
        container:
          volumeMounts:
            - name: aws
              mountPath: /etc/aws
        pod:
          volumes:
            - name: aws
              configMap:
                name: aws
    type: Kubernetes
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: aws
  namespace: envoy-gateway-system
data:
  credentials: |
    [meow]
    aws_access_key_id = AWS_ACCESS_KEY_ID
    aws_secret_access_key = AWS_SECRET_ACCESS_KEY
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: awscredentialsfile
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: awscredentialsfile-gateway
  namespace: default
spec:
  gatewayClassName: awscredentialsfile
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  infrastructure:
    parametersRef:
      # This will be generated by the ai-gateway controller.
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: credentials-file
---
apiVersion: aigateway.envoyproxy.io/v1alpha1
kind: LLMRoute
metadata:
  name: awscredentialsfile
  namespace: default
spec:
  targetRefs:
    - name: awscredentialsfile-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
  backends:
    - backendRef:
        name: aws-bedrock
        kind: Backend
        group: gateway.envoyproxy.io
      schema: AWSBedrock
      providerPolicy:
        type: AWSBedrock
        awsBedrock:
          region: AWS_REGION
          type: CredentialsFile
          credentialsFile:
            path: /etc/aws/credentials
            profile: meow
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: aws-bedrock
  namespace: default
spec:
  endpoints:
    - fqdn:
        # https://docs.aws.amazon.com/general/latest/gr/bedrock.html
        # https://docs.aws.amazon.com/bedrock/latest/APIReference/API_runtime_Converse.html
        hostname: bedrock-runtime.AWS_REGION.amazonaws.com
        port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  name: enable-backend-tls-for-aws
  namespace: default
spec:
  targetRefs:
    - group: 'gateway.envoyproxy.io'
      kind: Backend
      name: aws-bedrock
  validation:
    wellKnownCACertificates: "System"
    hostname: bedrock-runtime.AWS_REGION.amazonaws.com
